--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: Gotham,Helvetica,Arial,sans-serif;
+    color: #4d6859;
 }
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.articles {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.article {
+    margin: 1rem;
+    flex-basis: 456px;
+}
+.recommended {
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    font-weight: bolder;
+    color: #00833d;
+    text-align: center;
+}
+.recommended .line {
+    margin-top: 0;
+    margin-bottom: .5rem;
+    position: relative;
+    z-index: 1;
+    width: 100%;
+}
+.recommended .line::before {
+    border-top: 2px solid #7fba00;
+    content: "";
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: -1;
+}
+.recommended span {
+    padding: 0 1rem;
+    background: white;
+}
+.products {
+    margin: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.product {
+    text-align: center;
+    flex-grow: 1;
+    flex-basis: 250px;
+    position:relative;
+}
+.product a {
+    text-decoration: none;
+    color: inherit;
+    position:relative;
+}
+.product a>div {
+    margin: 5px 0;
+}
+.product .category {
+    color:grey;
+    font-size: 0.7rem;
+}
+.product .name {
+    color: black;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+.product .contents {
+    color: grey;
+    font-size: 0.9;
+    font-weight: bold;
+    margin: 1rem 0;
+}
+.product .price {
+    color:black;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+.product.special .price {
+    color: #990028;
+}
+.product.special .special-offer {
+    background: #ddebb3;
+    position:absolute;
+    transform: rotate(90deg);
+    transform-origin: left top 0;
+    top:0;
+    right:0;
+    padding: 0.5rem 1rem;
+    border-radius: 0 5px 5px 0;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.product .add-to-cart {
+    display: inline-block;
+    background: #d44400;
+    color: white;
+    padding: 1rem;
+    margin: 1rem;
+    font-weight: bold;
+    border-radius: 3px;
 }
